# AutoReport-Automated-Report-Analytics-Generator

./: .gitignore  README.md  create_db.py  pyproject.toml  requirements.txt
autoreport/: main.py
autoreport/analysis/: anamolies.py  insights.py  statistics.py  trends.py
autoreport/charts/: chart_factory.py
autoreport/injestion/: api_reader.py  data_loader.py  json_reader.py  sqlite_reader.py
autoreport/report/: html_report.py  pdf_report.py  template_loader.py
autoreport/reports/: report.html
autoreport/scheduler/: scheduler.py
data/: hr.csv  inventory.csv  sales.csv  sales.db
templates/: hr.yaml  inventory.yaml  reports.html  sales.yaml
tests/: test_csv_reader.py  test_data_loader.py  test_statistics.py
