[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreport"
version = "1.0.0"
description = "Automated Report & Analytics Generator"
authors = [
    {name = "Ashutosh Singh"}
]
dependencies = [
    "pandas",
    "matplotlib",
    "jinja2",
    "pyyaml",
    "reportlab",
    "typer",
    "apscheduler",
    "openpyxl"
]

[tool.setuptools]
packages = ["autoreport"]